# RcppAttributes

./: .gitignore  Analyze.cpp  CMakeLists.txt  Clang.cpp  Clang.hpp  Main.cpp  Notes.Rmd  README.md
RcppAttribPackage/: DESCRIPTION  NAMESPACE
RcppAttribPackage/R/: rcpp_hello_world.R
RcppAttribPackage/man/: RcppAttribPackage-package.Rd
RcppAttribPackage/src/: rcpp_attribs_example.cpp  rcpp_hello_world.h
